--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-<head>Test Page</head>
+<header>Test Page</header>
 <body>
+<hr>
 This is my test page on GitHub.<br>
 Software developer in Java, Oracle.
 </body>
