--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ Hello!<br>
 This is my test page on GitHub.<br>
 Software developer in Java, Oracle.<br>
 <br>
-From ded branch.
+From dev branch.
 </body>
 </html>
