--- a/demo-springboot-web/src/main/resources/static/index.html
+++ b/demo-springboot-web/src/main/resources/static/index.html
@@ -49,11 +49,11 @@ function deleteClub(name) {
 <body>
 <h1>A simple Spring boot Rest API</h1>
 Say Hello with <br>
-<a href=/hello?name=Jeff>Rest</a>, &nbsp;
-<a href=/hello1?name=Jeff>MVC with Thymeleaf</a>&nbsp;
-<a href=/hello2?name=Jeff>MVC without Thymeleaf)</a>&nbsp;
-<a href=/hello3?name=Jeff>MVC with ResponseEntity)</a>&nbsp;
-<a href=/hello4?name=Jeff>MVC with HTTPServletResponse)</a>&nbsp;
+<a href=/spring-boot-demo/hello?name=Jeff>Rest</a>, &nbsp;
+<a href=/spring-boot-demo/hello1?name=Jeff>MVC with Thymeleaf</a>&nbsp;
+<a href=/spring-boot-demo/hello2?name=Jeff>MVC without Thymeleaf)</a>&nbsp;
+<a href=/spring-boot-demo/hello3?name=Jeff>MVC with ResponseEntity)</a>&nbsp;
+<a href=/spring-boot-demo/hello4?name=Jeff>MVC with HTTPServletResponse)</a>&nbsp;
 
 <br><hr><br>
 
