--- a/Coding/src/demos/javascript/calculator.html
+++ b/Coding/src/demos/javascript/calculator.html
@@ -67,7 +67,7 @@ function addNum(){
 	result.value = value;
 
 }
-function opChange(value) {
+function onChange(value) {
 	num2 = document.getElementById("num2");
 	if(value=="**2" || value=="sqrt") {
 		num2.disabled=true;
@@ -96,7 +96,7 @@ function getFoodCourt() {
 <h1>JavaScript Calculator</h1>
 Number 1: <input type=text id=num1 placeholder="Number 1" onchange=validateNumber(this.value)></input><br>
 Operation: 
-<select id="operation" onchange=opChange(this.value) >
+<select id="operation" onchange=onChange(this.value) >
 	<option value="+">Add</option>
 	<option value="-">Subtract</option>
 	<option value="*">Multiply</option>
